# leaf

./: .env.example  .gitignore  PHASE_7_COMPLETION.md  README.md  docker-compose.yml  releaf_run
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_06_13_0718-aa4cb698c68d_initial_schema.py  2026_06_13_0916-a43854d2752a_add_summary_to_threads.py  2026_06_13_0916-b5d774efa819_add_is_pending_to_analysis.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  account.py  analysis.py  email.py  feedback.py  thread.py
backend/app/routers/: accounts.py  emails.py  feedback.py  health.py  search.py  sync.py  websocket.py
backend/app/schemas/: __init__.py  account.py  analysis.py  email.py
backend/app/services/: priority.py  websocket.py
backend/app/services/ai/: __init__.py  classification.py  client.py  embedding.py  extraction.py  mock_client.py  schemas.py  spam.py  summarization.py  utils.py
backend/app/services/imap/: __init__.py  client.py  credential_store.py  gmail.py  outlook.py  parser.py  pool.py  threading.py
backend/app/services/pipeline/: __init__.py
backend/app/services/search/: bm25_searcher.py  hybrid_searcher.py  query_parser.py  search_service.py  vector_searcher.py
backend/app/services/storage/: __init__.py  account_repo.py  analysis_repo.py  email_repo.py  storage_service.py  vector_store.py
backend/app/workers/: backfill.py  sync.py
backend/scripts/: seed_test_data.py
backend/tests/: conftest.py
backend/tests/fixtures/: generate_eml_fixtures.py
backend/tests/fixtures/eml/: 01_plain_text.eml  02_plain_no_name.eml  03_html_only.eml  04_html_with_scripts.eml  05_multipart_alternative.eml  06_multipart_attachment.eml  07_multiple_recipients.eml  08_utf8_subject.eml  09_iso8859_subject.eml  10_utf8_sender_name.eml  11_date_timezone.eml  (+14 more)
backend/tests/integration/: test_email_factory.py  test_imap_client.py  test_ollama_ai.py  test_pipeline.py  test_routers.py  test_search_service.py  test_storage_service.py
backend/tests/unit/: test_account_repo.py  test_ai_classification.py  test_ai_client.py  test_ai_deep_services.py  test_ai_embedding_prompts.py  test_analysis_repo.py  test_credential_store.py  test_email_repo.py  test_parser.py  test_parser_fixtures.py  test_priority.py  test_threading.py  test_vector_store.py
(+21 files in other folders)
