[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privatemailai"
version = "0.1.0"
description = "Privacy-first local AI email assistant"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi[all]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "aiosqlite>=0.21.0",
    # Config
    "pydantic-settings>=2.7.0",
    # IMAP / Email parsing
    "imapclient>=3.0.1",
    "mail-parser>=3.15.0",
    "beautifulsoup4>=4.12.3",
    "html2text>=2024.2.26",
    # AI / Embeddings
    "chromadb>=0.6.3",
    "ollama>=0.4.6",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "sentence-transformers>=3.3.1",
    # Auth / Security
    "keyring>=25.6.0",
    "python-jose[cryptography]>=3.4.0",
    # Scheduling
    "apscheduler>=3.10.4",
    # OAuth providers
    "google-auth-oauthlib>=1.2.1",
    "msal>=1.31.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "black>=24.10.0",
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "ASYNC",# flake8-async
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults (standard for FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: tests that require external services such as Ollama",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.black]
line-length = 100
target-version = ["py311"]
